JWT and CORS implimentation

--- a/CollegeApp/appsettings.json
+++ b/CollegeApp/appsettings.json
@@ -2,7 +2,11 @@
   "Logging": {
     "LogLevel": {
       "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Microsoft.AspNetCore": "Warning",
+      "Microsoft": "Warning",
+      "Microsoft.Hosting.Lifetime": "Information",
+      "Microsoft.AspNetCore.Authentication": "debug",
+      "Microsoft.AspNetCore.Authorization": "debug"
     },
     "Console": {
       "Default": "Trace"
@@ -14,5 +18,8 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "CollegeAppDB": "Data Source=DESKTOP-1NMP0A7\\SUDHARSHAN;Initial Catalog=CollegeAppDB;Persist Security Info=True;User ID=sa;Password=Siddu@123;Encrypt=True;Trust Server Certificate=True"
-  }
+  },
+  "JWTSecretForMicroSoft": "Sudharshan K njsO*U*U#DJNDJIOJ#U(IODJFHIUFHFnjsO*U*U#DJNDJIOJ#U(IODJFHIUFHFnjsO*U*U#DJNDJIOJ#U(IODJFHIUFHFnjsO*U*U#DJNDJIOJ#U(IODJFHIUFHFnjsO*U*U#DJNDJIOJ#U(IODJFHIUFHF",
+  "JWTSecretForGoogle": "Sudharshan K njsO*U*U#DJNDJIOJ#U(IODJFHIUFHFnjsO*U*U#DJNDJIOJ#U(IODJFHIUFHFnjsO*U*U#DJNDJIOJ#U(IODJFHIUFHFnjsO*U*U#DJNDJIOJ#U(IODJFHIUFHFnjsO*U*U#DJNDJIOJ#U(IODJFHIUFHF",
+  "JWTSecretForLocalUsers": "Sudharshan K njsO*U*U#DJNDJIOJ#U(IODJFHIUFHFnjsO*U*U#DJNDJIOJ#U(IODJFHIUFHFnjsO*U*U#DJNDJIOJ#U(IODJFHIUFHFnjsO*U*U#DJNDJIOJ#U(IODJFHIUFHFnjsO*U*U#DJNDJIOJ#U(IODJFHIUFHF"
 }
